impl of getter and setter fo userID e datasetID function
