# solution/controllers/macro.js
@@ -2,12 +2,9 @@ var Macro = require('../models/macro');
 var macros =  {};
 
 //A group of functions to Calculate Stats or Transfs and Prints Charts in a row 
-macros['m1'] = {content: "s1,t1,c1", 			};
-macros['m2'] = {content: "s1,t1,c1,s2,t2,c2", 	};
 
 var errors = {};
 errors['404'] = {code: 404, message: "Macro not found!"};
-errors['409'] = {code: 409, message: "Conflict, Macro already exists!"};
 errors['400'] = {code: 400, message: "Bad Request!"};
 errors['405'] = {code: 405, message: "Method not allowed in this resource!"};
 
@@ -26,7 +23,7 @@ exports.getMacros = function(req, res) {
 
                 res.statusCode = 404;
                 res.setHeader("Content-Type", "application/json");
-                res.json(errors[statusCode]);;
+                res.json(errors[statusCode]);
                 console.log("»»» None datasets found! ");
             }
             else {
@@ -37,7 +34,6 @@ exports.getMacros = function(req, res) {
             }
         }
     });
-
 
 };
 
@@ -75,7 +71,7 @@ exports.postMacros = function(req, res) {
                         res.statusCode = 201;
                         res.setHeader("Content-Type", "application/json");
                         res.json(macro_id);
-                        console.log("»»» Your specific Macro: " + macro_id + " was successfully created for username: " + req.username);
+                        console.log("»»» Your specific Macro: " + macro_id + " was successfully created for username: " + Function.getUserID());
                     }
                 }
             );
@@ -140,49 +136,8 @@ exports.getMacro = function(req, res) {
 
 };
 
-exports.postMacro = function(req, res) {
-    console.log("»»» Accepted POST request to calculate transf_id: " + req.macro_id + " for DatasetID: " + req.dataset_id + " and UserID: " + req.username + " Develop here what happens");
-    if (req.username && req.dataset_id && req.macro_id ) {
-        callbackID = getSequence("stID");
-
-        //setTimeout(function() {
-        request({
-                uri : serverHeavyOps + "/HeavyOps/" + req.username + "/" + req.dataset_id + "/" + req.macro_id,
-                method: "POST",
-                json : {text:"test of callback post", sender:"Datasheet_srv.js", callbackURL: CALLBACK_ROOT + "/callback/", myRef:callbackID},
-            },
-            function(err, res, body){
-
-                if (!err && 202 === res.statusCode) {
-                    console.log("»»» Posted a Heavy Operation request and got " + res.statusCode );
-                    console.log("»»» Success!... Gets your callback results within 30 seconds in http://localhost:3001/Results/" + callbackID  );
-                    res.statusCode = 202;
-                } else	{
-                    console.log("»»» Internal error in HeavyOps server. Please contact system administrator. Status Code = " + res.statusCode);
-                }
-            });
-        //}, 2000);
-        res.setHeader("Content-Type", "application/json");
-        res.end("<html><body><h1> " +
-            "<p>Success!... Your request operation number is " + callbackID + "</p>" +
-            "<p>This is a heavy operation so gets your callback result within 30 seconds in <a href='" + "http://localhost:3001/Results/" + "'" + ">Results</a></p>" +
-            "<p>Or come back to Home Page to request more operations <a href='http://localhost:3001/index.html'>Home Page</a></p>" +
-            "</h1></body></html>");
-    } else {
-        if (req.username === undefined || req.dataset_id === undefined || req.macro_id === undefined) {
-            res.statusCode = 400;
-            res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Bad request. Check the definition documentation. " +
-                "</h1></body></html>");
-            console.log("»»» Bad request. Check the definition documentation.");
-        }
-    }
-
-};
-
 exports.putMacro = function(req, res) {
-    if (req.username && req.macro_id) {
+    if (Function.getUserID() && req.macro_id) {
         if (req.body.stat_id || req.body.transf_id || req.body.chart_id) {
 
             //TODO = Develop here what happens
@@ -191,26 +146,20 @@ exports.putMacro = function(req, res) {
             // send 200 response
             res.statusCode = 200;
             res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Macro: " + req.macro_id + " successfully updated! " +
-                "</h1></body></html>");
+            res.json( { OK : "OK"} );
             console.log("»»» Macro: " + req.macro_id + " successfully updated!");
         }
     }
     else {
-        if (req.username === undefined || req.macro_id === undefined ) {
+        if (Function.getUserID() === undefined || req.macro_id === undefined ) {
             res.statusCode = 404 ;
             res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Macro: or User " + req.macro_id + " or " + req.username + " not found! " +
-                "</h1></body></html>");
-            console.log("»»» Macro: or User " + req.macro_id + " or " + req.username + " not found! ");
+            res.json(errors[res.statusCode]);
+            console.log("»»» Macro: or User " + req.macro_id + " or " + Function.getUserID() + " not found! ");
         } else {
             res.statusCode = 400;
             res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Bad request. Check the definition documentation. " +
-                "</h1></body></html>");
+            res.json(errors[res.statusCode]);
             console.log("»»» Bad request. Check the definition documentation.");
         }
     }
@@ -218,36 +167,30 @@ exports.putMacro = function(req, res) {
 };
 
 exports.deleteMacro = function(req, res) {
-    if (req.username === undefined || req.macro_id === undefined ) {
+    if (Function.getUserID() === undefined || req.macro_id === undefined ) {
 
         console.log("»»» Accepted DELETE to this resource. Develop here what happens");
 
         res.statusCode = 404 ;
         res.setHeader("Content-Type", "application/json");
-        res.end("<html><body><h1> " +
-            "Macro or User " + req.macro_id + " or " + req.username + " not found! " +
-            "</h1></body></html>");
-        console.log("»»» Macro or User " + req.macro_id + " or " + req.username + " not found! ");
+        res.json(errors[res.statusCode]);
+        console.log("»»» Macro or User " + req.macro_id + " or " + Function.getUserID() + " not found! ");
     }
     else {
-        if (req.username && req.macro_id) {
+        if (Function.getUserID() && req.macro_id) {
 
             delete macros[req.macro_id];
 
             console.log("»»» Accepted DELETE to this resource. Develop here what happens");
 
-            res.statusCode = 200 ;
+            res.statusCode = 204 ;
             res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Macro: " + req.macro_id + " successfully deleted for username: " + req.username +
-                "</h1></body></html>");
-            console.log("»»» Macro: " + req.macro_id + " successfully deleted for username: " + req.username);
+            res.json( {} );
+            console.log("»»» Macro: " + req.macro_id + " successfully deleted for username: " + Function.getUserID());
         } else {
             res.statusCode = 400;
             res.setHeader("Content-Type", "application/json");
-            res.end("<html><body><h1> " +
-                "Bad request. Check the definition documentation. " +
-                "</h1></body></html>");
+            res.json(errors[res.statusCode]);
             console.log("»»» Bad request. Check the definition documentation.");
         }
     }
