# swagger/Datasheet_svc.yaml
@@ -349,7 +349,7 @@ paths:
               $ref: '#/definitions/StatResponse'
         400:
           description: Bad request. Check the definition documentation.
-  /Trnsfs:
+  /Transfs:
     get:
       tags:
         - Transformations
@@ -364,7 +364,7 @@ paths:
         200:
           description: Tansoformation(s) available.
           schema:
-              $ref: '#/definitions/TrnsfResponse'
+              $ref: '#/definitions/TransfResponse'
         400:
           description: Bad request. Check the definition documentation.
   /Charts:
@@ -442,20 +442,20 @@ paths:
          in: path
          required: true
          type: string
-       - name: TrnsfID
+       - name: TransfID
          in: query
          required: true
          type: string
        - name: body
          in: body
-         required: true
+         required: false
          schema:
-            $ref: "#/definitions/TrnsfRequest"
+            $ref: "#/definitions/TransfRequest"
       responses:
         202:
           description: Accepted.
           schema:
-            $ref: "#/definitions/TrnsfResponse"
+            $ref: "#/definitions/TransfResponse"
         400:
           description: Bad request. Check the definition documentation.
         default:
@@ -557,12 +557,12 @@ definitions:
         type: string
       value:
         type: integer
-  TrnsfRequest:
+  TransfRequest:
     type: object
     properties:
       value:
         type: string
-  TrnsfResponse:
+  TransfResponse:
     type: object
     properties:
       result_url:
